[package]
name = "rustorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha1 = { version = "0.10" }
# Alternative to BTreeMap to keep the order of insertion
# in some of our hashmaps (Bencode parser)
indexmap = { version = "1" }
# Encoding library that supports binary (byte strings) encoding
urlencoding = { version = "2" }